# ntp-one-time

./: setup.cfg
src/ntp_one_time_dig/: __main__.py  update_time.py
