[metadata]
name = ntp_one_time_dig
version = 0.1.2
author = Gustavo de Oliveira Silva (DIG)
description = One time ntp check and apply
keywords = ntp
license = CC BY-ND 4.0
license_files = license.txt
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    ntplib>=0.4.0
    pywin32>=300 ; platform_system == 'Windows'

[options.packages.find]
where=src
